RESOLVED FIXED148497
REGRESSION (r188987): imported/mozilla/svg/filters/feConvolveMatrix-1.svg fails
https://bugs.webkit.org/show_bug.cgi?id=148497
Summary REGRESSION (r188987): imported/mozilla/svg/filters/feConvolveMatrix-1.svg fails
Andy Estes
Reported 2015-08-26 16:58:42 PDT
imported/mozilla/svg/filters/feConvolveMatrix-1.svg is failing after r188987. See https://build.webkit.org/results/Apple%20Mavericks%20Release%20WK2%20(Tests)/r188994%20(16700)/results.html for details.
Attachments
Patch (3.73 KB, patch)
2015-08-27 13:55 PDT, Anders Carlsson
aestes: review+
Andy Estes
Comment 1 2015-08-26 17:04:52 PDT
Marked as ImageOnlyFailure in r189004: http://trac.webkit.org/changeset/189004
Radar WebKit Bug Importer
Comment 2 2015-08-27 11:35:38 PDT
Anders Carlsson
Comment 3 2015-08-27 13:55:21 PDT
Anders Carlsson
Comment 4 2015-08-27 14:02:54 PDT
Note You need to log in before you can comment on or make changes to this bug.