REGRESSION (r188987): imported/mozilla/svg/filters/feConvolveMatrix-1.svg fails https://bugs.webkit.org/show_bug.cgi?id=148497 <rdar://problem/22459541>

Reviewed by Andy Estes.

Source/WebCore:

Don't return early if iterations is 0.

* platform/graphics/filters/FEConvolveMatrix.cpp:
(WebCore::FEConvolveMatrix::platformApplySoftware):

LayoutTests:

* TestExpectations:

Canonical link: https://commits.webkit.org/166644@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189048 268f45cc-cd09-0410-ab3c-d52691b4dbfc